# snt

./: .gitignore  CMakeLists.txt  README.md
consumer/: CMakeLists.txt
consumer/src/: main.cpp
docs/: Тестовое задание с++.doc
include/: sample.hpp
producer/: CMakeLists.txt
producer/include/: sample.hpp
producer/src/: chunk_list.cpp  chunk_list.hpp  generator.cpp  generator.hpp  main.cpp  producer.cpp  producer.hpp  publisher.cpp  publisher.hpp  storage.cpp  storage.hpp
